--- a/src/output.css
+++ b/src/output.css
@@ -554,12 +554,168 @@ video {
   --tw-contain-style:  ;
 }
 
-.top-0 {
-  top: 0px;
+.right-0 {
+  right: 0px;
+}
+
+.right-5 {
+  right: 1.25rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-1 {
+  top: 0.25rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.right-10 {
+  right: 2.5rem;
+}
+
+.right-2 {
+  right: 0.5rem;
+}
+
+.right-20 {
+  right: 5rem;
+}
+
+.right-\[-\] {
+  right: -;
+}
+
+.right-\[-5\] {
+  right: -5;
+}
+
+.right-\[-5px\] {
+  right: -5px;
+}
+
+.right-\[-10px\] {
+  right: -10px;
+}
+
+.right-\[-20px\] {
+  right: -20px;
+}
+
+.right-\[-30px\] {
+  right: -30px;
+}
+
+.right-\[-50px\] {
+  right: -50px;
+}
+
+.right-\[-100px\] {
+  right: -100px;
+}
+
+.right-\[-px\] {
+  right: -px;
+}
+
+.right-\[-200px\] {
+  right: -200px;
+}
+
+.right-\[-150px\] {
+  right: -150px;
+}
+
+.right-\[-120px\] {
+  right: -120px;
+}
+
+.right-\[-12px\] {
+  right: -12px;
+}
+
+.right-\[-125px\] {
+  right: -125px;
+}
+
+.right-\[-127px\] {
+  right: -127px;
+}
+
+.right-\[-128px\] {
+  right: -128px;
+}
+
+.right-\[-129px\] {
+  right: -129px;
+}
+
+.right-\[-130px\] {
+  right: -130px;
+}
+
+.right-\[-132px\] {
+  right: -132px;
+}
+
+.right-\[-134px\] {
+  right: -134px;
+}
+
+.top-3 {
+  top: 0.75rem;
+}
+
+.top-8 {
+  top: 2rem;
+}
+
+.top-7 {
+  top: 1.75rem;
+}
+
+.right-\[-118px\] {
+  right: -118px;
+}
+
+.right-\[-116px\] {
+  right: -116px;
+}
+
+.right-\[-117px\] {
+  right: -117px;
+}
+
+.right-\[-115px\] {
+  right: -115px;
+}
+
+.right-\[-11px\] {
+  right: -11px;
+}
+
+.right-\[-114px\] {
+  right: -114px;
+}
+
+.right-\[-113px\] {
+  right: -113px;
 }
 
 .m-0 {
   margin: 0px;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .ml-5 {
@@ -574,6 +730,10 @@ video {
   margin-top: 2.5rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
@@ -584,46 +744,6 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
-.ml-8 {
-  margin-left: 2rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.mt-7 {
-  margin-top: 1.75rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
 }
 
 .box-content {
@@ -638,6 +758,38 @@ video {
   height: 620px;
 }
 
+.h-\[400px\] {
+  height: 400px;
+}
+
+.h-\[600px\] {
+  height: 600px;
+}
+
+.h-\[550px\] {
+  height: 550px;
+}
+
+.h-\[570px\] {
+  height: 570px;
+}
+
+.h-\[572px\] {
+  height: 572px;
+}
+
+.h-\[574px\] {
+  height: 574px;
+}
+
+.h-\[575px\] {
+  height: 575px;
+}
+
+.w-\[130px\] {
+  width: 130px;
+}
+
 .w-\[300px\] {
   width: 300px;
 }
@@ -650,32 +802,24 @@ video {
   width: 100%;
 }
 
-.w-\[\] {
-  width: ;
+.w-\[500px\] {
+  width: 500px;
+}
+
+.w-\[600px\] {
+  width: 600px;
 }
 
 .w-\[100px\] {
   width: 100px;
 }
 
-.w-\[200px\] {
-  width: 200px;
+.w-\[800px\] {
+  width: 800px;
 }
 
-.w-\[150px\] {
-  width: 150px;
-}
-
-.w-\[140px\] {
-  width: 140px;
-}
-
-.w-\[135px\] {
-  width: 135px;
-}
-
-.w-\[130px\] {
-  width: 130px;
+.w-\[900px\] {
+  width: 900px;
 }
 
 .flex-\[50\%\] {
@@ -702,16 +846,16 @@ video {
   justify-content: center;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-1\.5 {
   gap: 0.375rem;
 }
 
 .gap-2 {
   gap: 0.5rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
 }
 
 .rounded-lg {
@@ -722,44 +866,12 @@ video {
   border-radius: 0.125rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
-.rounded-\[8px\] {
-  border-radius: 8px;
-}
-
-.rounded-\[6px\] {
-  border-radius: 6px;
-}
-
-.rounded-\[4px\] {
-  border-radius: 4px;
+.border-\[1\.5px\] {
+  border-width: 1.5px;
 }
 
 .border-\[1px\] {
   border-width: 1px;
-}
-
-.border {
-  border-width: 1px;
-}
-
-.border-4 {
-  border-width: 4px;
-}
-
-.border-2 {
-  border-width: 2px;
-}
-
-.border-\[1\.5px\] {
-  border-width: 1.5px;
 }
 
 .border-none {
@@ -769,15 +881,6 @@ video {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
-.border-\[\] {
-  border-color: ;
-}
-
-.border-gray-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
 .bg-azul-claro {
@@ -803,8 +906,18 @@ video {
      object-fit: cover;
 }
 
+.object-fill {
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+
 .p-0 {
   padding: 0px;
+}
+
+.px-\[34px\] {
+  padding-left: 34px;
+  padding-right: 34px;
 }
 
 .py-1\.5 {
@@ -817,44 +930,14 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-\[12px\] {
-  padding-top: 12px;
-  padding-bottom: 12px;
-}
-
-.py-\[16px\] {
-  padding-top: 16px;
-  padding-bottom: 16px;
-}
-
-.px-\[32px\] {
-  padding-left: 32px;
-  padding-right: 32px;
-}
-
-.px-\[34px\] {
-  padding-left: 34px;
-  padding-right: 34px;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-7 {
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
-}
-
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.py-\[16px\] {
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .pl-2 {
@@ -873,16 +956,8 @@ video {
   padding-top: 2rem;
 }
 
-.pb-3 {
-  padding-bottom: 0.75rem;
-}
-
 .text-center {
   text-align: center;
-}
-
-.text-justify {
-  text-align: justify;
 }
 
 .font-roboto {
@@ -902,36 +977,12 @@ video {
   font-weight: 700;
 }
 
-.font-normal {
-  font-weight: 400;
-}
-
-.font-light {
-  font-weight: 300;
-}
-
 .font-medium {
   font-weight: 500;
 }
 
-.text-azul-escuro {
-  --tw-text-opacity: 1;
-  color: rgb(56 81 133 / var(--tw-text-opacity));
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+.font-normal {
+  font-weight: 400;
 }
 
 .text-azul-claro {
@@ -939,19 +990,14 @@ video {
   color: rgb(76 181 249 / var(--tw-text-opacity));
 }
 
-.text-gray-900 {
+.text-azul-escuro {
   --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
+  color: rgb(56 81 133 / var(--tw-text-opacity));
 }
 
-.text-gray-950 {
+.text-gray-500 {
   --tw-text-opacity: 1;
-  color: rgb(3 7 18 / var(--tw-text-opacity));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-gray-800 {
@@ -959,14 +1005,9 @@ video {
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
-.text-gray-300 {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .outline-none {
