--- a/src/output.css
+++ b/src/output.css
@@ -883,6 +883,11 @@ video {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+
 .bg-azul-claro {
   --tw-bg-opacity: 1;
   background-color: rgb(76 181 249 / var(--tw-bg-opacity));
